--- a/views/students.ejs
+++ b/views/students.ejs
@@ -26,3 +26,17 @@
     <% }) %>
   </tbody>
 </table>
+<!-- Dom based XSS vulnerability demonstration script -->
+<script>
+  //Malicious script injected via URL parameter "msg", will be executed when page loads
+  const params = new URLSearchParams(window.location.search);
+  //Attacker can add 
+  const message = params.get("msg");
+
+  // VULNERABLE: writing directly to innerHTML
+  if (message) {
+    document.body.innerHTML +=
+    '<div class="alert alert-info mt-3">' + message + '</div>';
+  }
+</script>
+
